# rest2mail

./: Cargo.toml  Dockerfile  README.md  sample.http
src/: mail.rs  mailer.rs  main.rs  routes.rs
